completed change requests
